auto-test/tests/chapter_18/invalid_struct_tags/for_loop_scope_2.c


int main(void) {
    void *ptr;

    
    
    
    
    for (;; ((struct s *)ptr)->i) {
        struct s {
            int i;
        };
        struct s x = {1};
        ptr = &x;
    }
}